--- a/package.json
+++ b/package.json
@@ -1,61 +1,33 @@
 {
   "name": "developingjay.github.io",
   "private": true,
-  "version": "0.0.1",
-  "author": "Joshua Scott",
+  "scripts": {
+    "build": "gridsome build",
+    "develop": "gridsome develop",
+    "explore": "gridsome explore"
+  },
   "dependencies": {
-    "develop": "^1.0.0",
-    "gatsby": "^2.24.67",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-feed": "^2.5.13",
-    "gatsby-plugin-google-analytics": "^2.3.15",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sass": "^2.3.14",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-remark-copy-linked-files": "^2.3.18",
-    "gatsby-remark-images": "^3.3.32",
-    "gatsby-remark-katex": "^3.3.13",
-    "gatsby-remark-prismjs": "^3.5.15",
-    "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-transformer-remark": "^2.8.37",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "katex": "^0.12.0",
-    "lodash": "^4.17.19",
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.6.2",
+    "@noxify/gridsome-remark-classes": "^1.0.0",
+    "@noxify/gridsome-remark-table-align": "^1.0.0",
+    "core-js": "^3.6.5",
+    "gridsome": "^0.7.20",
+    "gridsome-plugin-tailwindcss": "^3.0.1",
+    "gridsome-source-static-meta": "github:noxify/gridsome-source-static-meta#master",
+    "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
-    "prismjs": "^1.20.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "pluralize": "^8.0.0",
+    "sass-loader": "^10.0.2",
+    "tailwindcss": "^1.8.4",
+    "tailwindcss-gradients": "^3.0.0",
+    "tailwindcss-tables": "^0.4.0",
+    "v-tooltip": "^2.0.3"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.21.3",
-    "gh-pages": "^3.1.0",
-    "prettier": "^1.19.1"
-  },
-  "homepage": "https://github.com/developingjay/developingjay.github.io",
-  "keywords": [
-    "gatsby"
-  ],
-  "license": "MIT",
-  "main": "n/a",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/developingjay/developingjay.github.io.git"
-  },
-  "scripts": {
-    "build": "gatsby build",
-    "clean": "rimraf .cache public",
-    "dev": "gatsby develop",
-    "develop": "gatsby develop",
-    "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\"",
-    "lint": "eslint --ext .js,.jsx --ignore-pattern public .",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js' 'src/**/*.md'",
-    "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js",
-    "deploymast": "npm run clean && git status && git add . && git commit -m 'updating blog' && git push",
-    "deploylive": "gatsby build && gh-pages -d public -b live"
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^2.0.0"
   }
 }
