--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "scripts": {
     "build": "gridsome build",
+    "clean":"rimraf .cache node_modules",
+    "deploy": "gh-pages -d dist",
     "develop": "gridsome develop",
     "explore": "gridsome explore"
   },
@@ -12,6 +14,7 @@
     "@noxify/gridsome-remark-classes": "^1.0.0",
     "@noxify/gridsome-remark-table-align": "^1.0.0",
     "core-js": "^3.6.5",
+    "gh-pages": "^3.1.0",
     "gridsome": "^0.7.20",
     "gridsome-plugin-tailwindcss": "^3.0.1",
     "gridsome-source-static-meta": "github:noxify/gridsome-source-static-meta#master",
