--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "gridsome build",
     "clean":"rimraf .cache node_modules",
-    "deploy": "gh-pages -d dist",
+    "deploy": "gridsome build && gh-pages -d dist",
     "develop": "gridsome develop",
     "explore": "gridsome explore"
   },
